<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HandiGab</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_initialize">Initialize</string>
    <string name="cardNumberString">Numero Carte</string>
    <string name="lastNameString">Nom</string>
    <string name="firstNameString">Prénom</string>
    <string name="dateString">Date de validité (mmaa)</string>
    <string name="bankNameString">Nom de la banque</string>
    <string name="initializeTitleString">Paramètres de la carte</string>
    <string name="accueilString">Bienvenue sur HandiGab!</string>
    <string name="cardString">Carte</string>
    <string name="configureString">Configuration</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="withdrawalString">Retrait</string>
    <string name="accountString">Relevé</string>
    <string name="title_activity_withdrawal">WithdrawalActivity</string>
    <string name="amountString">Montant saisi</string>
    <string name="title_activity_authentification">AuthentificationActivity</string>
    <string name="pinString">Saisir PIN</string>
    <string name="title_activity_wait">Wait</string>
    <string name="waitString">En attente ...</string>
    <string name="title_activity_money">Money</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_amount">AmountActivity</string>
    <string name="e10">10€</string>
    <string name="e20">20€</string>
    <string name="e50">50€</string>
    <string name="e100">100€</string>
    <string name="e200">200€</string>
    <string name="saisir_montant">Saisir montant</string>
    <string name="valider">Valider</string>
    <string name="title_activity_cards">CardsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_information">InformationActivity</string>

</resources>
