<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Initialize" >

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cardNumber"
        android:layout_marginLeft="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lastNameString" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lastName"
        android:layout_marginLeft="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/firstNameString" />

    <EditText
        android:id="@+id/bankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/firstName"
        android:layout_marginLeft="36dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/dateString" />

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bankName"
        android:layout_marginLeft="36dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/bankNameString" />

    <EditText
        android:id="@+id/initializeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:ems="10"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        android:text="@string/initializeTitleString" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/cardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/initializeTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/cardNumberString" />

</RelativeLayout>