<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardString" 
             android:onClick="launchService"
             android:background="@drawable/button_normal_xml"/>

        <Button
            android:id="@+id/configure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configureString"
            android:onClick="launchInitialize"
            android:background="@drawable/button_normal_xml" />

    </LinearLayout>

    <TextView
        android:id="@+id/accueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:text="@string/accueilString" />

</RelativeLayout>